examples/variable_simple_error2.june
// error: can't find variable

let x = 123

y
// test comment